; ModuleID = '/home/carl/AnghaBench/linux/sound/firewire/dice/extr_dice-pcm.c_capture_trigger.c'
source_filename = "/home/carl/AnghaBench/linux/sound/firewire/dice/extr_dice-pcm.c_capture_trigger.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_pcm_substream = type { %struct.TYPE_2__*, %struct.snd_dice* }
%struct.TYPE_2__ = type { i64 }
%struct.snd_dice = type { %struct.amdtp_stream* }
%struct.amdtp_stream = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_pcm_substream*, i32)* @capture_trigger to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @capture_trigger(%struct.snd_pcm_substream* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.snd_pcm_substream*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.snd_dice*, align 8
  %7 = alloca %struct.amdtp_stream*, align 8
  store %struct.snd_pcm_substream* %0, %struct.snd_pcm_substream** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %4, align 8
  %9 = getelementptr inbounds %struct.snd_pcm_substream, %struct.snd_pcm_substream* %8, i32 0, i32 1
  %10 = load %struct.snd_dice*, %struct.snd_dice** %9, align 8
  store %struct.snd_dice* %10, %struct.snd_dice** %6, align 8
  %11 = load %struct.snd_dice*, %struct.snd_dice** %6, align 8
  %12 = getelementptr inbounds %struct.snd_dice, %struct.snd_dice* %11, i32 0, i32 0
  %13 = load %struct.amdtp_stream*, %struct.amdtp_stream** %12, align 8
  %14 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %4, align 8
  %15 = getelementptr inbounds %struct.snd_pcm_substream, %struct.snd_pcm_substream* %14, i32 0, i32 0
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = getelementptr inbounds %struct.amdtp_stream, %struct.amdtp_stream* %13, i64 %18
  store %struct.amdtp_stream* %19, %struct.amdtp_stream** %7, align 8
  %20 = load i32, i32* %5, align 4
  switch i32 %20, label %28 [
    i32 129, label %21
    i32 128, label %25
  ]

21:                                               ; preds = %2
  %22 = load %struct.amdtp_stream*, %struct.amdtp_stream** %7, align 8
  %23 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %4, align 8
  %24 = call i32 @amdtp_stream_pcm_trigger(%struct.amdtp_stream* %22, %struct.snd_pcm_substream* %23)
  br label %31

25:                                               ; preds = %2
  %26 = load %struct.amdtp_stream*, %struct.amdtp_stream** %7, align 8
  %27 = call i32 @amdtp_stream_pcm_trigger(%struct.amdtp_stream* %26, %struct.snd_pcm_substream* null)
  br label %31

28:                                               ; preds = %2
  %29 = load i32, i32* @EINVAL, align 4
  %30 = sub nsw i32 0, %29
  store i32 %30, i32* %3, align 4
  br label %32

31:                                               ; preds = %25, %21
  store i32 0, i32* %3, align 4
  br label %32

32:                                               ; preds = %31, %28
  %33 = load i32, i32* %3, align 4
  ret i32 %33
}

declare dso_local i32 @amdtp_stream_pcm_trigger(%struct.amdtp_stream*, %struct.snd_pcm_substream*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
